# pinguim.2023

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: Component.h  Face.h  Game.h  GameObject.h  Music.h  Rect.h  Sound.h  Sprite.h  State.h  Vec2.h
src/: Component.cpp  Face.cpp  Game.cpp  GameObject.cpp  Music.cpp  Rect.cpp  Sound.cpp  Sprite.cpp  State.cpp  Vec2.cpp  main.cpp
